2. If showing multiple artist biographies in MAI then add titles for each.
3. Fix adding Bliss mix to queue.
4. Remove 'Add to playlist' for Bliss and MusicIP mixes, not working.
5. If 'Show all artists' is enabled then show all artsts, track-artists, and
   album-artists - thanks to Darrell.
6. Add support for LMS9.1 'Playlist Folder' browse mode.

5.10.3
------
1. Add AudioDrama, DJMix, Interview, and Spokenword release icons.
2. When getting release icons remove hyphen, underscore, and spaces from
   release name.
3. When updating native app of selected player, also send player's IP address -
   then the Material APK can use this to detect if that player is local.
4. Prevent duplicate 'Scroll to' action.

5.10.2
------
1. Re-add 'Compositions' action.
2. Group all non-artist roles under 'Appearances' when listing an artist's
   albums.
3. Use circular images for works-composers as per other artists.
4. Allow moving queue from group to a member.
5. Show error message if attempt to transfer queue to a player it is already
   synced with.
6. Update Ubuntu and Fedora icons.
7. Add simple 'es' icon for Ever-Solo players.
8. Add simple 32-bit icon for ESP32 players.
9. Add release icons for audio book, demo, and mixtape.

5.10.1
------
1. Fix status icon colours in expanded now-playing when using coloured toolbars
   with light themes.
2. Fix listing of services when no artist items have been favourited.
3. Re-add 'Appearances' in artist's release lists.
4. Sort search track results by title.
5. Fix shortcuts in navigation drawer for players that cannot power off.
6. Fix show all values for roles in MAI track view.

5.10.0
------
 1. Only show 'roles' in '...' menu, not as categories in browse list.
 2. Only cache artists and albums lists if using default library view.
 3. Fix resetting some colour variables when changing colour setting from 'From
    current cover'
 4. Change list/grid toggle icon to match LMS9.1's